# unifi-official-api

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  context7.json  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: api.instructions.md  config_flow.instructions.md  configuration_yaml.instructions.md  coordinator.instructions.md  diagnostics.instructions.md  entities.instructions.md  json.instructions.md  manifest.instructions.md  markdown.instructions.md  python.instructions.md  repairs.instructions.md  service_actions.instructions.md  services_yaml.instructions.md  tests.instructions.md  translations.instructions.md  yaml.instructions.md
.github/prompts/: Add Action.prompt.md  Add Config Option.prompt.md  Add Entity Platform.prompt.md  Add Entity to Device.prompt.md  Add New Sensor.prompt.md  Create ADR.prompt.md  Create Implementation Plan.prompt.md  Debug Coordinator Issue.prompt.md  Review Integration.prompt.md  Review python library.md  Update Translations.prompt.md
.github/workflows/: ci.yml  codecov.yml  release.yml
.serena/: project.yml
src/unifi_official_api/: __init__.py  _version.py  auth.py  base.py  const.py  exceptions.py
src/unifi_official_api/network/: __init__.py  client.py
src/unifi_official_api/network/endpoints/: __init__.py  acl.py  clients.py  devices.py  dns.py  firewall.py  networks.py  resources.py  sites.py  traffic.py  vouchers.py  wifi.py
src/unifi_official_api/network/models/: __init__.py  acl.py  application.py  client.py  device.py  dns.py  firewall.py  network.py  resources.py  site.py  traffic.py  voucher.py  wifi.py
src/unifi_official_api/protect/: __init__.py  client.py  websocket.py
src/unifi_official_api/protect/endpoints/: __init__.py  application.py  cameras.py  chimes.py  events.py  lights.py  liveviews.py  nvr.py  sensors.py  viewers.py
src/unifi_official_api/protect/models/: __init__.py  camera.py  chime.py  event.py  files.py  light.py  liveview.py  nvr.py  sensor.py  viewer.py
tests/: __init__.py  conftest.py  test_auth.py  test_base_client.py  test_coverage_boost.py  test_edge_cases.py  test_exceptions.py  test_full_coverage.py
tests/network/: __init__.py  test_client.py  test_models.py  test_new_endpoints.py
tests/protect/: __init__.py  test_client.py  test_endpoints.py  test_models.py  test_new_endpoints.py  test_protect_endpoints.py
