[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-official-api"
dynamic = ["version"]
description = "Async Python library for the official UniFi Network and Protect APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ruaan Deysel" },
]
keywords = [
    "unifi",
    "ubiquiti",
    "network",
    "protect",
    "api",
    "async",
    "home-assistant",
    "iot",
    "smart-home",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "yarl>=1.9.0",
]

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aioresponses>=0.7.6",
]
# Linting and type checking
lint = [
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
# All development dependencies
dev = [
    "unifi-official-api[test,lint,docs]",
    "pre-commit>=3.6.0",
]

[tool.hatch.version]
path = "src/unifi_official_api/_version.py"

[project.urls]
Documentation = "https://github.com/ruaan-deysel/unifi-official-api#readme"
Issues = "https://github.com/ruaan-deysel/unifi-official-api/issues"
Source = "https://github.com/ruaan-deysel/unifi-official-api"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_official_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific
    "ASYNC",  # flake8-async
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "RUF022",   # __all__ not sorted (we group by category)
]

[tool.ruff.lint.isort]
known-first-party = ["unifi_official_api"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLC0415"]  # Allow imports in test functions

[tool.coverage.run]
source = ["src/unifi_official_api"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used check (needed for tests)

[tool.bandit.assert_used]
skips = ["*/test_*.py"]
